static/css/style.css
body {
  color: #333;
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  line-height: 1.8em;
  margin: 20px;
}

a {
  color: #1400ff;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

nav {
  margin-bottom: 20px;
}

nav a {
  font-size: 24px;
  margin: 4px;
  font-weight: 300;
  color: black;
}

nav a:first-child {
  margin-left: 0;
}

nav a:last-child {
  margin-right: 0;
}

nav .rgth {
  font-weight: bold;
  color: #1400ff;
}

li span {
  margin-left: 6px;
  color: rgba(0, 0, 0, .5);
}

p, blockquote {
  line-height: 24px;
  margin-bottom: 30px;
}

blockquote {
  font-style: italic;
  color: rgba(0, 0, 0, .8);
  margin: 0 0 30px 0;
  padding-left: 30px;
  border-left: 1px solid rgba(0, 0, 0, .3);
}

hr {
  border: 0;
  border-top: 1px solid rgba(0, 0, 0, .3);
  margin: 60px 0;
}

footer {
  margin-top: 80px;
}

.highlight {
  padding: 10px 30px;
  margin: 30px 0 30px 0;
  background: #f9f9f9;
  font-size: 14px;
}

pre, code {
  font-family: 'Fira Mono', monospace;
}

@media (min-width: 1024px) {
  body {
    max-width: 700px;
    margin: 20px auto;
  }

  footer {
    opacity: .5;
    transition: opacity .3s ease;
    -moz-transition: opacity .3s ease;
    -webkit-transition: opacity .3s ease;
    -o-transition: opacity .3s ease;
  }

  footer:hover {
    opacity: 1;
    transition: opacity .3s ease;
    -moz-transition: opacity .3s ease;
    -webkit-transition: opacity .3s ease;
    -o-transition: opacity .3s ease;
  }
}

